--- a/tp6/tme6.ipynb
+++ b/tp6/tme6.ipynb
@@ -152,9 +152,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "epoch 0 : Train Loss 1.72, Train acc 32.17, Test Loss 1.70, Test acc 37.84\n",
+      "epoch 1 : Train Loss 1.04, Train acc 63.97, Test Loss 1.06, Test acc 52.21\n",
+      "epoch 2 : Train Loss 0.78, Train acc 74.57, Test Loss 0.80, Test acc 63.55\n",
+      "epoch 3 : Train Loss 0.69, Train acc 79.40, Test Loss 0.67, Test acc 61.73\n",
+      "epoch 4 : Train Loss 0.60, Train acc 82.16, Test Loss 0.58, Test acc 70.23\n",
+      "epoch 5 : Train Loss 0.49, Train acc 84.67, Test Loss 0.52, Test acc 69.84\n",
+      "epoch 6 : Train Loss 0.41, Train acc 86.61, Test Loss 0.47, Test acc 72.53\n",
+      "epoch 7 : Train Loss 0.39, Train acc 89.02, Test Loss 0.43, Test acc 59.73\n",
+      "epoch 8 : Train Loss 0.34, Train acc 89.89, Test Loss 0.40, Test acc 71.24\n",
+      "epoch 9 : Train Loss 0.39, Train acc 91.44, Test Loss 0.37, Test acc 65.69\n",
+      "epoch 10 : Train Loss 0.32, Train acc 91.97, Test Loss 0.34, Test acc 77.71\n",
+      "epoch 11 : Train Loss 0.24, Train acc 93.14, Test Loss 0.33, Test acc 71.27\n",
+      "epoch 12 : Train Loss 0.22, Train acc 93.85, Test Loss 0.31, Test acc 72.16\n",
+      "epoch 13 : Train Loss 0.22, Train acc 94.44, Test Loss 0.29, Test acc 73.35\n",
+      "epoch 14 : Train Loss 0.17, Train acc 94.99, Test Loss 0.29, Test acc 73.57\n",
+      "epoch 15 : Train Loss 0.17, Train acc 95.68, Test Loss 0.28, Test acc 68.96\n",
+      "epoch 16 : Train Loss 0.13, Train acc 95.77, Test Loss 0.27, Test acc 76.52\n",
+      "epoch 17 : Train Loss 0.15, Train acc 96.10, Test Loss 0.26, Test acc 77.35\n",
+      "epoch 18 : Train Loss 0.16, Train acc 96.83, Test Loss 0.26, Test acc 68.89\n",
+      "epoch 19 : Train Loss 0.20, Train acc 96.73, Test Loss 0.26, Test acc 77.54\n",
+      "epoch 20 : Train Loss 0.12, Train acc 97.04, Test Loss 0.25, Test acc 76.14\n",
+      "epoch 21 : Train Loss 0.17, Train acc 97.44, Test Loss 0.26, Test acc 72.73\n",
+      "epoch 22 : Train Loss 0.15, Train acc 97.54, Test Loss 0.25, Test acc 75.07\n",
+      "epoch 23 : Train Loss 0.08, Train acc 97.60, Test Loss 0.25, Test acc 78.10\n",
+      "epoch 24 : Train Loss 0.11, Train acc 97.88, Test Loss 0.25, Test acc 75.11\n",
+      "epoch 25 : Train Loss 0.12, Train acc 98.32, Test Loss 0.25, Test acc 69.16\n",
+      "epoch 26 : Train Loss 0.08, Train acc 98.51, Test Loss 0.25, Test acc 68.21\n",
+      "epoch 27 : Train Loss 0.08, Train acc 98.17, Test Loss 0.25, Test acc 77.56\n",
+      "epoch 28 : Train Loss 0.09, Train acc 98.22, Test Loss 0.26, Test acc 78.87\n",
+      "epoch 29 : Train Loss 0.07, Train acc 98.59, Test Loss 0.25, Test acc 72.99\n",
+      "epoch 30 : Train Loss 0.09, Train acc 98.54, Test Loss 0.26, Test acc 76.11\n",
+      "epoch 31 : Train Loss 0.08, Train acc 98.97, Test Loss 0.26, Test acc 69.18\n",
+      "epoch 32 : Train Loss 0.09, Train acc 99.09, Test Loss 0.26, Test acc 68.45\n",
+      "epoch 33 : Train Loss 0.07, Train acc 98.70, Test Loss 0.26, Test acc 78.42\n",
+      "epoch 34 : Train Loss 0.05, Train acc 98.88, Test Loss 0.27, Test acc 75.64\n",
+      "epoch 35 : Train Loss 0.06, Train acc 98.96, Test Loss 0.27, Test acc 75.61\n",
+      "epoch 36 : Train Loss 0.06, Train acc 99.03, Test Loss 0.27, Test acc 75.25\n",
+      "epoch 37 : Train Loss 0.05, Train acc 99.19, Test Loss 0.27, Test acc 73.30\n",
+      "epoch 38 : Train Loss 0.06, Train acc 99.10, Test Loss 0.28, Test acc 76.11\n",
+      "epoch 39 : Train Loss 0.03, Train acc 99.01, Test Loss 0.28, Test acc 79.56\n",
+      "epoch 40 : Train Loss 0.05, Train acc 99.34, Test Loss 0.29, Test acc 73.48\n",
+      "epoch 41 : Train Loss 0.03, Train acc 99.09, Test Loss 0.29, Test acc 80.15\n",
+      "epoch 42 : Train Loss 0.04, Train acc 99.21, Test Loss 0.28, Test acc 78.53\n",
+      "epoch 43 : Train Loss 0.05, Train acc 99.22, Test Loss 0.29, Test acc 79.16\n",
+      "epoch 44 : Train Loss 0.04, Train acc 99.63, Test Loss 0.29, Test acc 71.63\n",
+      "epoch 45 : Train Loss 0.04, Train acc 99.25, Test Loss 0.30, Test acc 80.83\n",
+      "epoch 46 : Train Loss 0.03, Train acc 99.54, Test Loss 0.30, Test acc 75.19\n",
+      "epoch 47 : Train Loss 0.04, Train acc 99.62, Test Loss 0.30, Test acc 74.29\n",
+      "epoch 48 : Train Loss 0.03, Train acc 99.61, Test Loss 0.30, Test acc 75.24\n",
+      "epoch 49 : Train Loss 0.04, Train acc 99.98, Test Loss 0.31, Test acc 69.03\n"
+     ]
+    }
+   ],
    "source": [
     "EMBEDDING_DIM = 32\n",
     "HIDDEN_DIM = 32\n",
@@ -185,7 +242,7 @@
     "        # Compute accuracy\n",
     "        predicted = tag_scores.max(1)[1]\n",
     "        c = (target == predicted) \n",
-    "        c[torch.where(target[1] == 0)] = False\n",
+    "        c[torch.where(target == 0)] = False\n",
     "        correct += c.sum() # nb of correct prediction\n",
     "        total += b*t - len(torch.where(target == 0)[0]) # nb of tags to predict\n",
     "        \n",
@@ -208,7 +265,7 @@
     "        # Compute accuracy\n",
     "        predicted = tag_scores.max(1)[1]\n",
     "        c = (target == predicted) \n",
-    "        c[torch.where(target[1] == 0)] = False\n",
+    "        c[torch.where(target == 0)] = False\n",
     "        correct += c.sum() # nb of correct prediction\n",
     "        total += b*t - len(torch.where(target == 0)[0]) # nb of tags to predict\n",
     "\n",
@@ -222,112 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "4153"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 85
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['__OOV__', ',', 'un', 'film', 'sur', 'la', 'vie', 'de', 'Hughes', '.']\n"
+     ]
     }
    ],
    "source": [
-    "len(torch.where(target == 0)[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "tensor([12, 12, 10,  5,  1, 14,  2, 14,  7, 12,  7, 12, 13,  5,  1, 14,  2, 14,\n",
-       "         7, 12, 12, 12,  7,  1,  3,  2, 10,  4,  1,  2,  7,  2,  3, 10,  9,  5,\n",
-       "         7,  6,  8,  2,  7,  2, 10,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 94
-    }
-   ],
-   "source": [
-    "target[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "tensor([ 5,  5, 12,  5, 16, 14,  7, 14, 14, 14, 14, 14,  5,  6,  6,  7,  7,  7,\n",
-       "         7,  7, 14, 14, 14, 12,  6,  0,  6, 17, 17, 12, 12, 14, 10, 14, 12, 14,\n",
-       "        14, 14, 14, 14, 14,  7, 17, 12, 12,  7,  7,  7,  7,  7,  7,  7,  7,  7,\n",
-       "         7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 95
-    }
-   ],
-   "source": [
-    "predicted[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = (target[1] == predicted[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "tensor([False, False, False,  True, False,  True, False,  True, False, False,\n",
-       "        False, False, False, False, False, False, False, False,  True, False,\n",
-       "        False, False, False, False, False, False, False, False, False, False,\n",
-       "        False, False, False, False, False, False, False, False, False, False,\n",
-       "        False, False, False, False, False, False, False, False, False, False,\n",
-       "        False, False, False, False, False, False, False, False, False, False,\n",
-       "        False, False, False, False, False, False, False])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 99
-    }
-   ],
-   "source": [
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b[torch.where(target[1] == 0)] = False"
+    "print(words.getwords(test_data[0][0]))\n",
+    "print(tags.getwords(test_data[0][0]))"
    ]
   },
   {
